--- a/package.json
+++ b/package.json
@@ -1,42 +1,61 @@
 {
-  "name": "zarata-2020-vue",
+  "name": "zarata-2020",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "description": "Zarata Fest 2020, using Parcel.js + Vue.js + Bootstrap",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "parcel:dev": "parcel src/index.html -p 8123 --open",
+    "parcel:build": "parcel build src/index.html --public-url ./ --out-dir dist --no-source-maps --no-cache",
+    "clean": "rimraf dist .cache .cache-loader",
+    "dev": "npm-run-all clean parcel:dev",
+    "build": "npm-run-all clean stylelint parcel:build",
+    "test": "echo 'Everything is working as expected ✅\nStart working on your project by running \\033[1mnpm run dev\\033[0m'",
+    "stylelint": "stylelint src/**/*.scss"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/karlosvalverde/zarata-2020.git"
+  },
+  "author": "Carlos Valverde <studio@carlos-valverde.com>",
+  "license": "MIT",
+  "homepage": "https://zarata2020.netlify.com",
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@vue/component-compiler-utils": "^3.1.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.13.1",
+    "jquery": "^3.4.1",
+    "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-imagemin": "^4.0.1",
+    "popper.js": "^1.16.1",
+    "postcss-clean": "^1.1.0",
+    "postcss-preset-env": "^6.7.0",
+    "rimraf": "^2.7.1",
+    "sass": "^1.26.3",
+    "stylelint": "^13.3.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.16.1",
+    "typescript": "^3.8.3",
+    "v-lazy-image": "^1.4.0",
+    "vue-lazy-youtube-video": "^2.0.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "babel-polyfill": "^6.26.0",
+    "lazyload": "^2.0.0-rc.2",
+    "vue": "^2.6.11",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.1.6"
   },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+  "bugs": {
+    "url": "https://github.com/karlosvalverde/zarata-2020/issues"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  "main": "postcss.config.js",
+  "keywords": []
 }
